# Endemic-OT-Kyber

./: .gitignore  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES.txt
cmake/: base.cmake
include/: PRNG.hpp  socket.hpp
include/EndemicOT/: EndemicOT.hpp  Endemic_OT_C.h  OTTools.h
libs/Kyber/: CMakeLists.txt
src/: PRNG.cpp  socket.cpp
src/EndemicOT/: EndemicOT.cpp  Endemic_OT_C.c  OTTools.c
tests/: EndemicOT.test.cpp
